--- a/lib/macroni/Conversion/Safety/CMakeLists.txt
+++ b/lib/macroni/Conversion/Safety/CMakeLists.txt
@@ -12,5 +12,6 @@ target_link_libraries(safety_conversion
     MLIRTargetLLVMIRExport
     MLIRLLVMToLLVMIRTranslation
     MLIRToLLVMIRTranslationRegistration
+    vast_settings
 )
 add_library(macroni::safety_conversion ALIAS safety_conversion)
