Fix linking to pasta

--- a/lib/macroni/Common/CMakeLists.txt
+++ b/lib/macroni/Common/CMakeLists.txt
@@ -4,6 +4,6 @@ add_library(macroni_common
 
 target_link_libraries(macroni_common
     PRIVATE
-        pasta::pasta
+        pasta
 )
 add_library(macroni::common ALIAS macroni_common)
