Reformat with cmake-format

--- a/lib/macroni/Common/CMakeLists.txt
+++ b/lib/macroni/Common/CMakeLists.txt
@@ -1,9 +1,5 @@
-add_library(macroni_common
-    ParseAST.cpp
-)
+add_library(macroni_common ParseAST.cpp)
 
-target_link_libraries(macroni_common
-    PRIVATE
-        pasta
-)
+target_link_libraries(macroni_common PRIVATE pasta)
+
 add_library(macroni::common ALIAS macroni_common)
