--- a/lib/macroni/Conversion/Kernel/CMakeLists.txt
+++ b/lib/macroni/Conversion/Kernel/CMakeLists.txt
@@ -1,17 +1,15 @@
-add_library(kernel_conversion
-    KernelRewriters.cpp
-)
+add_library(kernel_conversion KernelRewriters.cpp)
 
-target_link_libraries(kernel_conversion
-    PRIVATE
-        MLIRIR
-        MLIRPass
-        MLIRTransformUtils
-        MLIRExecutionEngine
-        MLIRLLVMCommonConversion
-        MLIRTargetLLVMIRExport
-        MLIRLLVMToLLVMIRTranslation
-        MLIRToLLVMIRTranslationRegistration
-        vast_settings
-)
+target_link_libraries(
+  kernel_conversion
+  PRIVATE MLIRIR
+          MLIRPass
+          MLIRTransformUtils
+          MLIRExecutionEngine
+          MLIRLLVMCommonConversion
+          MLIRTargetLLVMIRExport
+          MLIRLLVMToLLVMIRTranslation
+          MLIRToLLVMIRTranslationRegistration
+          vast_settings)
+
 add_library(macroni::kernel_conversion ALIAS kernel_conversion)
