--- a/lib/macroni/Dialect/Macroni/CMakeLists.txt
+++ b/lib/macroni/Dialect/Macroni/CMakeLists.txt
@@ -1,20 +1,19 @@
 # Copyright (c) 2023-present, Trail of Bits, Inc.
 
 add_mlir_dialect_library(MLIRMacroni
-    MacroniDialect.cpp
-    MacroniOps.cpp
+  MacroniDialect.cpp
+  MacroniOps.cpp
 
-    DEPENDS
-        MLIRMacroniIncGen
+  DEPENDS
+    MLIRMacroniIncGen
 
-    LINK_LIBS PUBLIC
-        MLIRIR
-        MLIRSupport
-        MLIRSideEffectInterfaces
-
-        MLIRCallInterfaces
-        MLIRCastInterfaces
-        MLIRControlFlowInterfaces
-        MLIRDataLayoutInterfaces
-        MLIRInferTypeOpInterface
-)
+  LINK_LIBS
+    PUBLIC
+      MLIRIR
+      MLIRSupport
+      MLIRSideEffectInterfaces
+      MLIRCallInterfaces
+      MLIRCastInterfaces
+      MLIRControlFlowInterfaces
+      MLIRDataLayoutInterfaces
+      MLIRInferTypeOpInterface)
