Prefix MLIR_LIBS variable with MACRONI
Prefix MLIR_LIBS variable with MACRONI to avoid possible name clashes
with VAST's MLIR_LIBS variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,14 +107,14 @@ else()
 endif()
 
 if(MLIR_LINK_MLIR_DYLIB)
-  set(MLIR_LIBS MLIR)
+  set(MACRONI_MLIR_LIBS MLIR)
 else()
   get_property(MLIR_DIALECT_LIBS GLOBAL PROPERTY MLIR_DIALECT_LIBS)
   get_property(MLIR_CONVERSION_LIBS GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
   get_property(MLIR_EXTENSION_LIBS GLOBAL PROPERTY MLIR_EXTENSION_LIBS)
   get_property(MLIR_TRANSLATION_LIBS GLOBAL PROPERTY MLIR_TRANSLATION_LIBS)
 
-  set(MLIR_LIBS
+  set(MACRONI_MLIR_LIBS
       MLIRAnalysis
       MLIRDialect
       MLIRExecutionEngine
