Link against MLIR_LIBS
Link against MLIR_LIBS instead of individual MLIR libraries for
simplicity (leave it up to the linker to decide which libraries have
unused symbols and not link them)

--- a/lib/macroni/Dialect/Kernel/CMakeLists.txt
+++ b/lib/macroni/Dialect/Kernel/CMakeLists.txt
@@ -12,13 +12,4 @@ add_mlir_dialect_library(MLIRKernel
     MLIRKernelIncGen
     MLIRKernelInterfacesIncGen
 
-  LINK_LIBS
-    PUBLIC
-      MLIRIR
-      MLIRSupport
-      MLIRSideEffectInterfaces
-      MLIRCallInterfaces
-      MLIRCastInterfaces
-      MLIRControlFlowInterfaces
-      MLIRDataLayoutInterfaces
-      MLIRInferTypeOpInterface)
+  LINK_LIBS PUBLIC ${MLIR_LIBS})
