--- a/lib/macroni/Conversion/Kernel/CMakeLists.txt
+++ b/lib/macroni/Conversion/Kernel/CMakeLists.txt
@@ -1,15 +1,5 @@
 add_library(kernel_conversion KernelRewriters.cpp)
 
-target_link_libraries(
-  kernel_conversion
-  PRIVATE MLIRIR
-          MLIRPass
-          MLIRTransformUtils
-          MLIRExecutionEngine
-          MLIRLLVMCommonConversion
-          MLIRTargetLLVMIRExport
-          MLIRLLVMToLLVMIRTranslation
-          MLIRToLLVMIRTranslationRegistration
-          vast_settings)
+target_link_libraries(kernel_conversion PRIVATE ${MLIR_LIBS} vast_settings)
 
 add_library(macroni::kernel_conversion ALIAS kernel_conversion)
