--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ build
 CMakeFiles/
 CMakeUserPresets.json
 compile_commands.json
+external/llvm-pasta-beeda8d.tar.xz
+external/llvm-pasta-beeda8d
 tablegen_compile_commands.yml
