Update PASTA and VAST submodules
- Add PASTA and VAST submodules back.
- Update PASTA to the latest version.
- Update VAST to use the mx-integration branch.

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,5 @@
 	url = https://github.com/trailofbits/pasta
 [submodule "external/vast"]
 	path = external/vast
-	url = https://github.com/PappasBrent/vast.git
+	url = https://github.com/trailofbits/vast
+	branch = mx-integration
