--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,5 @@ build.sh
 CMakeFiles/
 CMakeUserPresets.json
 compile_commands.json
-external/llvm-pasta-beeda8d
-external/llvm-pasta-beeda8d.tar.xz
+external/llvm-pasta-*
 tablegen_compile_commands.yml
