Don't link against macroni translation libs
Don't link against macroni translation libs yet while we work to update
Macroni's visitor to use the latest version of VAST and PASTA.

--- a/bin/Macronify/CMakeLists.txt
+++ b/bin/Macronify/CMakeLists.txt
@@ -7,8 +7,8 @@ llvm_update_compile_flags(macronify)
 
 target_link_libraries(macronify
     PRIVATE
-        macroni_api
-        MLIRMacroni
+        macroni_settings
+        macroni_common
         VASTCodeGen
         VASTFrontend
 )
