Add GenerateMacroniDriver to macroni_common
Extract macroni module generation function into a file
GenerateMacroniDriver and add it to macroni_common for other targets to
use.

--- a/lib/macroni/Common/CMakeLists.txt
+++ b/lib/macroni/Common/CMakeLists.txt
@@ -1,5 +1,3 @@
-add_library(macroni_common ParseAST.cpp)
-
-target_link_libraries(macroni_common PRIVATE pasta_cxx_settings)
-
+add_library(macroni_common ParseAST.cpp GenerateMacroniDriver.cpp)
+target_link_libraries(macroni_common PRIVATE macroni_settings)
 add_library(macroni::common ALIAS macroni_common)
