Add MACROIN_MLIR_LIBS to macroni_settings
Add MACROIN_MLIR_LIBS to macroni_settings to make it simpler to link
against all targets. Later we will have to revise this to only links
specific MLIR libs against the targets that actually need them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,7 @@ target_link_libraries(
   macroni_settings
   INTERFACE ${LLVM_LIBS}
             ${CLANG_LIBS}
+            ${MACRONI_MLIR_LIBS}
             gap::gap
             pasta
             pasta_cxx_settings
