Reformat and only link against macroni_api
Reformat CMake and only link Main.cpp against macroni_api since that
contains all dependencies already.

--- a/bin/Macronify/CMakeLists.txt
+++ b/bin/Macronify/CMakeLists.txt
@@ -1,16 +1,9 @@
 set(LLVM_LINK_COMPONENTS Core Support AsmParser)
 
-add_executable(macronify
-    Main.cpp
-)
+add_executable(macronify Main.cpp)
+
 llvm_update_compile_flags(macronify)
 
-target_link_libraries(macronify
-    PRIVATE
-        macroni_settings
-        macroni_common
-        VASTCodeGen
-        VASTFrontend
-)
+target_link_libraries(macronify PRIVATE macroni_api)
 
 mlir_check_link_libraries(macronify)
