Only link to macroni_settings
Only link to macroni_settings for now since that includes all
dependencies. Later we can review and only link MLIRMacroni to the
targets that it requires.

--- a/lib/macroni/Dialect/Macroni/CMakeLists.txt
+++ b/lib/macroni/Dialect/Macroni/CMakeLists.txt
@@ -7,4 +7,4 @@ add_mlir_dialect_library(MLIRMacroni
   DEPENDS
     MLIRMacroniIncGen
 
-  LINK_LIBS PUBLIC ${MLIR_LIBS})
+  LINK_LIBS PUBLIC macroni_settings)
