Reformat with cmake-format

--- a/lib/macroni/Dialect/Macroni/CMakeLists.txt
+++ b/lib/macroni/Dialect/Macroni/CMakeLists.txt
@@ -1,10 +1,14 @@
 # Copyright (c) 2023-present, Trail of Bits, Inc.
 
-add_mlir_dialect_library(MLIRMacroni
+add_mlir_dialect_library(
+  MLIRMacroni
+  #
   MacroniDialect.cpp
   MacroniOps.cpp
-
+  #
   DEPENDS
-    MLIRMacroniIncGen
-
-  LINK_LIBS PUBLIC macroni_settings)
+  MLIRMacroniIncGen
+  #
+  LINK_LIBS
+  PUBLIC
+  macroni_settings)
