--- a/lib/macroni/Common/CMakeLists.txt
+++ b/lib/macroni/Common/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(macroni_common ParseAST.cpp GenerateMacroniDriver.cpp)
+add_library(macroni_common ParseAST.cpp)
 target_link_libraries(macroni_common PRIVATE macroni_settings)
 add_library(macroni::common ALIAS macroni_common)
