Reformat and link to macroni_settings

--- a/lib/macroni/Dialect/Safety/CMakeLists.txt
+++ b/lib/macroni/Dialect/Safety/CMakeLists.txt
@@ -1,9 +1,13 @@
 # Copyright (c) 2023-present, Trail of Bits, Inc.
 
-add_mlir_dialect_library(MLIRSafety
+add_mlir_dialect_library(
+  MLIRSafety
   SafetyDialect.cpp
   SafetyOps.cpp
-
-  DEPENDS MLIRSafetyIncGen
-
-  LINK_LIBS PUBLIC ${MLIR_LIBS})
+  #
+  DEPENDS
+  MLIRSafetyIncGen
+  #
+  LINK_LIBS
+  PUBLIC
+  macroni_settings)
