Remove macroni_common
Remove macroni_common library since there is now no common functionality
shared between dialects.

--- a/lib/macroni/Common/CMakeLists.txt
+++ b/lib/macroni/Common/CMakeLists.txt
@@ -1,3 +1,1 @@
-add_library(macroni_common ParseAST.cpp)
-target_link_libraries(macroni_common PRIVATE macroni_settings)
-add_library(macroni::common ALIAS macroni_common)
+# Copyright (c) 2024-present, Trail of Bits, Inc.
