Add ParseAST.cpp, only link Macroni dialect libs

--- a/bin/Macronify/CMakeLists.txt
+++ b/bin/Macronify/CMakeLists.txt
@@ -1,9 +1,10 @@
 set(LLVM_LINK_COMPONENTS Core Support AsmParser)
 
-add_executable(macronify Macronify.cpp)
+add_executable(macronify Macronify.cpp ParseAST.cpp)
 
 llvm_update_compile_flags(macronify)
 
-target_link_libraries(macronify PRIVATE macroni_api MLIRMacroni)
+target_link_libraries(macronify PRIVATE macroni_settings
+                                        macroni_translation_api MLIRMacroni)
 
 mlir_check_link_libraries(macronify)
