Only link to macroni_settings for dependencies

--- a/lib/macroni/Conversion/Kernel/CMakeLists.txt
+++ b/lib/macroni/Conversion/Kernel/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(kernel_conversion KernelRewriters.cpp)
 
-target_link_libraries(kernel_conversion PRIVATE ${MLIR_LIBS} vast_settings)
+target_link_libraries(kernel_conversion PUBLIC macroni_settings)
 
 add_library(macroni::kernel_conversion ALIAS kernel_conversion)
