Add KernelASTConsumer to CMake

--- a/bin/Kernelize/CMakeLists.txt
+++ b/bin/Kernelize/CMakeLists.txt
@@ -3,7 +3,8 @@ set(LLVM_LINK_COMPONENTS Core Support AsmParser)
 set(MACRONI_ORIGINAL_LLVM_RUNTIME_OUTPUT_INTDIR ${LLVM_RUNTIME_OUTPUT_INTDIR})
 
 set(LLVM_RUNTIME_OUTPUT_INTDIR ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>)
-add_clang_executable(kernelize Kernelize.cpp RCUCollector.cpp)
+add_clang_executable(kernelize Kernelize.cpp RCUCollector.cpp
+                     KernelASTConsumer.cpp)
 
 set(LLVM_RUNTIME_OUTPUT_INTDIR ${MACRONI_ORIGINAL_LLVM_RUNTIME_OUTPUT_INTDIR})
 
