Update CMake to add new safety_matchers lib

--- a/lib/macroni/CMakeLists.txt
+++ b/lib/macroni/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Copyright (c) 2023-present, Trail of Bits, Inc.
 
+add_subdirectory(ASTMatchers)
 add_subdirectory(Common)
 add_subdirectory(Config)
 add_subdirectory(Dialect)
