Add CMake for new RCU analyzer class

--- a/bin/Kernelize/CMakeLists.txt
+++ b/bin/Kernelize/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(
           macroni_common
           kernel_translation_api
           rcu_matchers
+          rcu_analyzer
           kernel_consumer
           MLIRKernel
           kernel_conversion)
